--- a/src/index.html
+++ b/src/index.html
@@ -4,10 +4,8 @@
 <head>
     <title>ProjectK-Electron</title>
     <link rel="stylesheet" href="./assets/css/styles.css" />
-    <script type="text/javascript" src="./assets/javascript/container.js" />
-    <script>
-        function test() {}
-    </script>
+    <script type="text/javascript" src="./assets/javascript/container.js"></script>
+    <script type="text/javascript" src="./assets/javascript/alexa.js"></script>
 </head>
 
 <body>
