--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="./assets/css/styles.css" />
     <script type="text/javascript" src="./assets/javascript/container.js"></script>
     <script type="text/javascript" src="./assets/javascript/alexa.js"></script>
+    <script type="text/javascript" src="./assets/javascript/wininteracter.js"></script>
 </head>
 
 <body>
