Working alternate window.onload

--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,7 @@
 <head>
     <title>ProjectK-Electron</title>
     <link rel="stylesheet" href="./assets/css/styles.css" />
+    <script type="text/javascript" src="./assets/javascript/main.js"></script>
     <script type="text/javascript" src="./assets/javascript/container.js"></script>
     <script type="text/javascript" src="./assets/javascript/alexa.js"></script>
     <script type="text/javascript" src="./assets/javascript/wininteracter.js"></script>
@@ -36,6 +37,9 @@
             </div>
         </div>
     </section>
+    <!-- More scripts -->
 </body>
+
+
 
 </html>
