--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,7 @@
     <script type="text/javascript" src="./assets/javascript/wininteracter.js"></script>
     <script type="text/javascript" src="./assets/javascript/alexa.js"></script>
     <script type="text/javascript" src="./assets/javascript/twitter.js"></script>
+    <script type="text/javascript" src="./assets/javascript/debug.js"></script>
 </head>
 
 <body>
