Begin work on weather module

--- a/src/index.html
+++ b/src/index.html
@@ -4,12 +4,14 @@
 <head>
     <title>ProjectK-Electron</title>
     <link rel="stylesheet" href="./assets/css/styles.css" />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script type="text/javascript" src="./assets/javascript/main.js"></script>
     <script type="text/javascript" src="./assets/javascript/container.js"></script>
     <script type="text/javascript" src="./assets/javascript/wininteracter.js"></script>
     <script type="text/javascript" src="./assets/javascript/alexa.js"></script>
     <script type="text/javascript" src="./assets/javascript/twitter.js"></script>
     <script type="text/javascript" src="./assets/javascript/debug.js"></script>
+    <script type="text/javascript" src="./assets/javascript/weather.js"></script>
 </head>
 
 <body>
