--- a/src/index.html
+++ b/src/index.html
@@ -28,12 +28,12 @@
     <section content="bodyContent">
         <div class="wrapper">
             <div class="canvas">
-                <div class="container">
+                <!--<div class="container">
                     <div class="contentContainer">
                         <h4>Hi</h4>
                         <p>Am a test window.</p>
                     </div>
-                </div>
+                </div>-->
             </div>
         </div>
     </section>
