--- a/src/index.html
+++ b/src/index.html
@@ -15,26 +15,17 @@
 </head>
 
 <body>
-    <!--<section class="loading">
-            <div class="loadingImage"></div>
-            <h1>Project K</h1>
-            <h5>Loading your map</h5>
-        </section>-->
     <header class="header">
-        <div class="menuBar">
-            <h2>Project K</h2>
+        <div class="menuBarWrapper">
+            <ul class="menuList">
+                <lh><h2 class="menutitle">Project K</h2></lh>
+                <li class="bar-items"><i class="material-icon">settings</i></li>
+            </ul>
         </div>
     </header>
     <section content="bodyContent">
         <div class="wrapper">
-            <div class="canvas">
-                <!--<div class="container">
-                    <div class="contentContainer">
-                        <h4>Hi</h4>
-                        <p>Am a test window.</p>
-                    </div>
-                </div>-->
-            </div>
+            <div class="canvas"></div>
         </div>
     </section>
     <!-- More scripts -->
