Adding new news module

--- a/src/index.html
+++ b/src/index.html
@@ -13,6 +13,7 @@
     <script type="text/javascript" src="./assets/javascript/twitter.js"></script>
     <script type="text/javascript" src="./assets/javascript/debug.js"></script>
     <script type="text/javascript" src="./assets/javascript/weather.js"></script>
+    <script type="text/javascript" src="./assets/javascript/news.js"></script>
 </head>
 
 <body>
