--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>ProjectK-Electron</title>
+    <title>ProjectS-Electron</title>
     <link rel="stylesheet" href="./assets/css/styles.css" />
     <!-- Electron scripts fix start -->
     <script>
@@ -23,6 +23,7 @@
     <script type="text/javascript" src="./assets/javascript/debug.js"></script>
     <script type="text/javascript" src="./assets/javascript/weather.js"></script>
     <script type="text/javascript" src="./assets/javascript/news.js"></script>
+    <script type="text/javascript" src="./assets/javascript/picotd.js"></script>
     <!-- Electron scripts fix start -->
     <script>
         if (window.module) module = window.module;
@@ -36,7 +37,7 @@
         <div class="menuBarWrapper">
             <ul class="menuList">
                 <lh>
-                    <h2 class="menutitle">Project K</h2>
+                    <h2 class="menutitle">Project S</h2>
                 </lh>
                 <li class="bar-items glance">
                     <div class="glance-tb">
